--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,8 @@ artifacts/
 *.vssscc
 .builds
 *.pidb
+*.pyproj
+*.sln
 *.svclog
 *.scc
 
@@ -259,3 +261,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+sdeint/
